--- a/data/benefits/javascript/ville_cholet_aide_permis.yml
+++ b/data/benefits/javascript/ville_cholet_aide_permis.yml
@@ -4,7 +4,7 @@ description: La Ville de Cholet soutient les jeunes Choletais et Puy-Saint-Bonne
   de 15 à 25 ans, engagés bénévolement, à travers l’attribution d’une aide financière
   à la formation à la conduite automobile auprès d’une école agréée et ce, quelle que
   soit la formule d’apprentissage choisie.
-prefix: l'
+prefix: l’
 conditions_generales:
   - type: communes
     values:
