--- a/data/benefits/javascript/msa_maine_et_loire_aide_permis.yml
+++ b/data/benefits/javascript/msa_maine_et_loire_aide_permis.yml
@@ -12,7 +12,7 @@ conditions_generales:
     operator: ">="
     value: 18
   - type: age
-    operator: <=
+    operator: <
     value: 25
 profils:
   - type: chomeur
