--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "tests/unit/openfisca/mapping/dispatch-individuals.spec.js"
+    "tests/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
