--- a/data/benefits/javascript/ville_paris_aide_logement_etudiant_aile.yml
+++ b/data/benefits/javascript/ville_paris_aide_logement_etudiant_aile.yml
@@ -1,6 +1,7 @@
 label: Aide à l’installation dans un logement pour les étudiants (AILE)
 institution: ville_paris
-description: La Ville de Paris a mis en place l’AILE afin de soutenir les étudiants
+description:
+  La Ville de Paris a mis en place l’AILE afin de soutenir les étudiants
   en situation de précarité qui doivent trouver un appartement dans le parc privé. Cette aide
   comprise entre 500 et 1000 euros est gérée par le Crous de Paris. Elle est ouverte
   aux étudiants boursiers et aux étudiants bénéficiaires du repas à 1 € inscrits dans
