Corrige le nom de l'institution Paris

--- a/data/benefits/javascript/ville_paris_aide_logement_etudiant_aile.yml
+++ b/data/benefits/javascript/ville_paris_aide_logement_etudiant_aile.yml
@@ -1,5 +1,5 @@
 label: Aide à l’installation dans un logement pour les étudiants (AILE)
-institution: ville_paris
+institution: paris
 description:
   La Ville de Paris a mis en place l’AILE afin de soutenir les étudiants
   en situation de précarité qui doivent trouver un appartement dans le parc privé. Cette aide
