--- a/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
+++ b/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
@@ -6,7 +6,9 @@ description: Le service FASTT SOS Location de véhicule aide les intérimaires
   à louer à prix réduit et pour une durée limitée à raison de 10€ par jour maximum et 60 jours de location maximum par an.
   L’assurance du véhicule ne couvre pas les usages professionnels.
 prefix: le
-conditions_generales: []
+conditions_generales:
+  - type: agence_travail_temporaire
+    value: true
 profils:
   - type: salarie
     conditions: []
