--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tools:get-all-steps": "ts-node ./tools/get-all-steps",
     "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
     "tools:serve-mail": "ts-node ./tools/mjml",
+    "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
     "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
     "tools:test-definition-periods": "ts-node ./tools/test-definition-periods",
     "tools:test-iframe-generation": "./tools/iframe-build-control.sh",
