refactor: déplace le script d'outil d'envoi de sms et ajoute une commande de test dans le package.json

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
     "tools:serve-mail": "ts-node ./tools/mjml",
     "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
+    "tools:send-initial-survey-sms": "ts-node ./tools/sms-sending-tool send initial-survey --multiple 10",
     "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
     "tools:test-definition-periods": "ts-node ./tools/test-definition-periods",
     "tools:test-iframe-generation": "./tools/iframe-build-control.sh",
