Ajoute la question pour les intérimaires - limiter l'affichage des aides du FASTT (#4067)
* feat: ajoute le champ agence_travail_temporaire et la question pour les salariés - limite affichage des aides du FASTT

* refactor: run format

* Fix: test e2e - ajout réponse agence travail temporaire

* refactor: supprime value true dans les conditions du type agence_travail_temporaire (aides fastt)

--- a/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
+++ b/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
@@ -6,7 +6,8 @@ description: Le service FASTT SOS Location de véhicule aide les intérimaires
   à louer à prix réduit et pour une durée limitée à raison de 10€ par jour maximum et 60 jours de location maximum par an.
   L’assurance du véhicule ne couvre pas les usages professionnels.
 prefix: le
-conditions_generales: []
+conditions_generales:
+  - type: agence_travail_temporaire
 profils:
   - type: salarie
     conditions: []
