--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -1,7 +1,7 @@
 locale: fr
 backend:
   name: git-gateway
-  branch: master
+  branch: main
   commit_messages:
     create: Crée {{slug}}
     update: Met à jour {{slug}}
