--- a/data/benefits/javascript/caf-bouches-du-rhone-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-bouches-du-rhone-aide-bafa-generale.yml
@@ -31,3 +31,4 @@ legend: maximum
 montant: 350
 link: https://caf.fr/allocataires/caf-des-bouches-du-rhone/offre-de-service/vie-professionnelle/devenir-animateur-bafa
 instructions: https://caf.fr/allocataires/caf-des-bouches-du-rhone/offre-de-service/vie-professionnelle/devenir-animateur-bafa
+form: https://caf.fr/sites/default/files/medias/131/Offres%20de%20service/Vie%20professionnelle/Documents/BafaFondCaf_09.23.pdf
