--- a/.github/workflows/check-links-validity.yaml
+++ b/.github/workflows/check-links-validity.yaml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "18.18.2"
       - run: npm ci
       - id: invalid_links
         run: npm run tools:check-links-validity
