--- a/.github/workflows/associate-actual-milestone.yml
+++ b/.github/workflows/associate-actual-milestone.yml
@@ -1,8 +1,9 @@
 name: Associate actual milestone
 
 on:
-  schedule:
-    - cron: "0 10 * * *" # Every day at 10:00 UTC
+  pull_request:
+    types:
+      - opened
 
 jobs:
   associate-milestone:
@@ -15,12 +16,7 @@ jobs:
       - name: Set up GitHub CLI
         uses: actions/setup-gh@v2
 
-      - name: Update milestone on open PRs
+      - name: Update milestone on a PR opening
         run: |
-          open_prs=$(gh pr list --base "master" --state open --json number -q ".[].number" 2>/dev/null || echo null)
-
-          if [ "$open_prs" != "null" ]; then
-            for pr_number in $open_prs; do
-              gh pr edit "$pr_number" --milestone "BC actuel"
-            done
-          fi
+          pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+          gh pr edit "$pr_number" --milestone "BC actuel"
