--- a/.github/workflows/associate-actual-milestone.yml
+++ b/.github/workflows/associate-actual-milestone.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Update milestone on a PR opening
         run: |
           pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
