Précise dans le titre des 4 aides que celles-ci sont destinées aux étudiants.

--- a/data/benefits/javascript/departement-mayenne-aide-etudiants-infirmiers.yml
+++ b/data/benefits/javascript/departement-mayenne-aide-etudiants-infirmiers.yml
@@ -1,4 +1,4 @@
-label: Aide financière pour les stagiaires en 3e année de soins infirmiers
+label: Aide financière pour les stagiaires en 3e année d'études de soins infirmiers
 institution: departement_mayenne
 description:
   Le Département de la Mayenne souhaite encourager les étudiants en 3ème année de soins infirmiers
