--- a/data/benefits/javascript/departement-mayenne-aide-etudiants-kine.yml
+++ b/data/benefits/javascript/departement-mayenne-aide-etudiants-kine.yml
@@ -1,4 +1,4 @@
-label: Aide financière pour les stagiaires en 4e année de masso-kinésithérapie
+label: Aide financière pour les stagiaires en 4e année d'études de masso-kinésithérapie
 institution: departement_mayenne
 description:
   Le Département de la Mayenne souhaite encourager les étudiants en 4ème année de masso-kinésithérapie
