--- a/data/benefits/javascript/departement-mayenne-aide-etudiants-orthophonistes.yml
+++ b/data/benefits/javascript/departement-mayenne-aide-etudiants-orthophonistes.yml
@@ -1,4 +1,4 @@
-label: Aide financière pour les stagiaires en 5e année d'orthophonie
+label: Aide financière pour les stagiaires en 5e année d'études d'orthophonie
 institution: departement_mayenne
 description:
   Le Département de la Mayenne souhaite encourager les étudiants en 5ème année d'orthophonie
