--- a/data/benefits/javascript/departement-mayenne-aide-etudiants-pharmaciens.yml
+++ b/data/benefits/javascript/departement-mayenne-aide-etudiants-pharmaciens.yml
@@ -1,7 +1,7 @@
 label: Aide financière pour les stagiaires en 6ème année d'études de pharmacie d'officine
 institution: departement_mayenne
 description:
-  Le Département de la Mayenne souhaite encourager les étudiants en 6ème année de d'études de pharmacie d'officine
+  Le Département de la Mayenne souhaite encourager les étudiants en 6ème année de pharmacie d'officine
   à réaliser leur stage de fin de cycle sur le territoire du département en leur versant une aide
   forfaitaire de 200 euros par période de stage.
 prefix: l’
