chore: désactive aide au permis de la ville d'ajaccio

--- a/data/benefits/javascript/ville_ajaccio_bourse_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/ville_ajaccio_bourse_au_permis_de_conduire.yml
@@ -30,3 +30,4 @@ legend: "de conduite"
 periodicite: ponctuelle
 link: https://www.ajaccio.fr/Bourse-au-permis-2023-20-heures-de-conduite-gratuites-pour-24-jeunes-Ajacciens-_a10872.html
 instructions: https://www.ajaccio.fr/Bourse-au-permis-2023-20-heures-de-conduite-gratuites-pour-24-jeunes-Ajacciens-_a10872.html
+private: true
