chore: désactive aide au permis du dpt Nord-Pas-De-Calais

--- a/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -31,3 +31,4 @@ periodicite: autre
 montant: 400
 link: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen
 instructions: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen
+private: true
