Désactive le Pass Mutuelle de la région PACA car cette aide n'existe plus.

--- a/data/benefits/javascript/region-provence-alpes-cote-azur-pass-mutuelles.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-pass-mutuelles.yml
@@ -22,3 +22,4 @@ periodicite: autre
 montant: 100
 link: https://www.maregionsud.fr/vos-aides/detail/pass-mutuelles
 instructions: https://www.maregionsud.fr/vos-aides/detail/pass-mutuelles
+private: true
