--- a/data/benefits/javascript/caf-puy-de-dome-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-puy-de-dome-aide-bafa-generale.yml
@@ -19,7 +19,6 @@ type: float
 unit: €
 periodicite: ponctuelle
 montant: 100
-link: https://caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/aide-la-formation-bafa
-form: https://caf.fr/sites/default/files/medias/631/Allocataires/PDF_alloc/BAFA_session_formation%20_g%C3%A9n%C3%A9rale_MAJjanvier_2022.pdf
-instructions: https://caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/aide-la-formation-bafa
-private: true
+link: https://www.caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/etre-parents/aide-au-bafa
+form: https://www.caf.fr/sites/default/files/medias/631/Allocataires/PDF_alloc/BAFA_janvier_2024.pdf
+instructions: https://www.caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/etre-parents/aide-au-bafa
