fix: run format

--- a/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
+++ b/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
@@ -1,6 +1,7 @@
 label: Accompagnement personnalisé
 institution: ville_aubervilliers
-description: Vous avez besoin d’aide pour comprendre vos aides et effectuer vos démarches ?
+description:
+  Vous avez besoin d’aide pour comprendre vos aides et effectuer vos démarches ?
   Prenez un rendez-vous pour vous faire accompagner. La prise de rendez-vous se fait
   en quelques minutes et vous permet de bénéficier d’un accompagnement téléphonique
   d’une vingtaine de minutes par un membre de notre équipe.
