--- a/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
+++ b/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
@@ -1,16 +1,15 @@
-label: Accompagnement personnalisé
+label: accompagnement personnalisé
 institution: ville_aubervilliers
-description: Vous avez besoin d’aide pour comprendre vos aides et effectuer vos démarches ?
-  Prenez un rendez-vous pour vous faire accompagner. La prise de rendez-vous se fait
-  en quelques minutes et vous permet de bénéficier d’un accompagnement téléphonique
-  d’une vingtaine de minutes par un membre de notre équipe.
+description: Vous avez besoin d’aide pour comprendre votre résultat de simulation
+  et effectuer vos démarches ? Prenez un rendez-vous pour être rappelé au téléphone.
+  La prise de rendez-vous se fait en quelques minutes et vous permet de bénéficier
+  d’un accompagnement téléphonique d’une vingtaine de minutes par un membre de
+  notre équipe.
 prefix: l'
 conditions_generales:
   - type: communes
     values:
       - "93001"
-conditions:
-  - Résider à Aubervilliers
 type: bool
 periodicite: autre
 teleservice: https://www.rdv-aide-numerique.fr/?address=1&departement=AJ
