--- a/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
+++ b/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
@@ -1,9 +1,10 @@
 label: accompagnement personnalisé
 institution: ville_aubervilliers
-description: Vous avez besoin d’aide pour comprendre votre résultat de simulation
+description:
+  Vous avez besoin d'aide pour comprendre votre résultat de simulation
   et effectuer vos démarches ? Prenez un rendez-vous pour être rappelé au téléphone.
   La prise de rendez-vous se fait en quelques minutes et vous permet de bénéficier
-  d’un accompagnement téléphonique d’une vingtaine de minutes par un membre de
+  d'un accompagnement téléphonique d'une vingtaine de minutes par un membre de
   notre équipe.
 prefix: l'
 conditions_generales:
