Évite diff dans l'aide BAFA

--- a/data/benefits/javascript/caf-aide-nationale-bafa.yml
+++ b/data/benefits/javascript/caf-aide-nationale-bafa.yml
@@ -1,4 +1,4 @@
-label: aide nationale au Brevet d’aptitude aux fonctions d’animateur (BAFA)
+label: aide nationale au Brevet d'aptitude aux fonctions d'animateur (BAFA)
 institution: caf
 description: "La Caisse Nationale d'Allocations Familiales vous aide à financer
   une partie de votre BAFA afin d'obtenir une formation qualifiante d’animateur.
