--- a/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
+++ b/data/benefits/javascript/ville-aubervilliers-accompagnement.yml
@@ -15,3 +15,4 @@ type: bool
 periodicite: autre
 teleservice: https://www.rdv-aide-numerique.fr/?address=1&departement=AJ
 link: https://www.rdv-aide-numerique.fr/?address=1&departement=AJ
+top: 0
