feat: ajoute une commande pour créer un followup et envoyer un email récap

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tools:get-latest-simulation-ids": "ts-node ./tools/get-latest-simulation-ids" ,
     "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
     "tools:serve-mail": "ts-node ./tools/mjml",
+    "tools:send-summary-email": "ts-node ./tools/email-summary-tool",
     "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
     "tools:send-initial-survey-sms": "ts-node ./tools/sms-sending-tool send initial-survey --multiple 2",
     "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
