Ajout des outils en ligne de commande pour l'envoi d'emails (#4185)

--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_PATH=. jest --testTimeout=20000",
     "tools:check-links-validity": "ts-node ./tools/check-links-validity.ts",
     "tools:cleaner": "ts-node ./tools/cleaner.ts",
+    "tools:create-temp-smtp-server": "ts-node ./tools/create-temp-smtp-server",
     "tools:evaluate-benefits": "ts-node ./tools/evaluate-benefits",
     "tools:generate-missing-institutions-aides-velo": "ts-node ./tools/generate-missing-institutions-aides-velo",
     "tools:generate-mongo-stats": "ts-node ./tools/mongo-query.ts",
     "tools:geographical-benefits-details": "ts-node ./tools/geographical-benefits-details",
     "tools:get-all-steps": "ts-node ./tools/get-all-steps",
+    "tools:get-latest-simulation-ids": "ts-node ./tools/get-latest-simulation-ids",
     "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
     "tools:serve-mail": "ts-node ./tools/mjml",
+    "tools:send-summary-email": "ts-node ./tools/email-summary-tool",
+    "tools:send-survey-email": "ts-node ./tools/email-sending-tool send simulation-usefulness",
     "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
     "tools:send-initial-survey-sms": "ts-node ./tools/sms-sending-tool send initial-survey --multiple 2",
     "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
