Nettoie les modifications d'exploration

--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
     "tools:test-definition-periods": "ts-node ./tools/test-definition-periods",
     "tools:test-iframe-generation": "./tools/iframe-build-control.sh",
-    "migrate": "ts-node ./backend/lib/migrations/apply.ts --all",
-    "tools:test": "ts-node ./tools/yolo.ts"
+    "migrate": "ts-node ./backend/lib/migrations/apply.ts --all"
   },
   "dependencies": {
     "@etalab/decoupage-administratif": "^3.0.0",
