--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,7 +307,14 @@ jobs:
         run: if "${GITHUB_WORKSPACE}/.github/has-file-changes.sh" "${GITHUB_WORKSPACE}/openfisca/requirements.txt" ; then echo "status=success" >> $GITHUB_OUTPUT ; fi
   test_definition_periods:
     name: Openfisca definition periods tests
-    needs: [install]
+    needs:
+      [
+        check-for-openfisca-requirements-changes,
+        install,
+        install_openfisca,
+        build,
+      ]
+    if: needs.check-for-openfisca-requirements-changes.outputs.status == 'success'
     runs-on: ubuntu-20.04
     timeout-minutes: 15
     steps:
@@ -317,15 +324,39 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18.18.2"
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Restore node modules
         uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Cache Virtual Environment
+        uses: actions/cache@v3
+        id: python-dependencies
+        with:
+          path: .venv
+          key: ${{ runner.os }}-cache-python-dependencies-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/openfisca/requirements.txt') }}
+      - name: Cache server build output
+        uses: actions/cache@v3
+        id: restore-server-build
+        with:
+          path: dist-server
+          key: ${{ runner.os }}-cache-server-build-${{ github.sha }}
+      - name: Start OpenFisca
+        shell: bash
+        run: |
+          source .venv/bin/activate
+          nohup gunicorn api --chdir openfisca/ --config openfisca/config.py --preload --log-level debug --log-file=- &
+          deactivate
+      - name: Wait openfisca
+        shell: bash
+        run: wget --retry-connrefused --waitretry=2 --output-document=/dev/null http://localhost:2000/variable/parisien
       - name: Test definition periods
         shell: bash
-        run: npm run tools:test
+        run: npm run tools:test-definition-periods
   test_benefit_file_changes:
     name: Test benefit file changes
     needs: [install]
